--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -21,6 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
+    "nodemailer-mailgun-transport": "^2.1.5",
     "uuid": "^10.0.0"
   }
 }
