updated nginx config to enable caching and modified cache-control header of the static middleware responses

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,8 @@ http {
         server api:8080;
     }
 
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=images_cache:20m max_size=5g inactive=1d use_temp_path=off;
+
     server {
         listen 80;
 
@@ -20,6 +22,15 @@ http {
         location ~ ^/feed/([0-9a-f])$ {
             include /etc/nginx/proxy.conf;
             client_max_body_size 76M;
+        }
+
+        location ~ ^/images/* {
+            include /etc/nginx/proxy.conf;
+            proxy_cache images_cache;
+            proxy_cache_valid 200 1d;
+            proxy_cache_bypass $http_cache_control;
+            add_header X-Cache-Status $upstream_cache_status;
+            proxy_cache_methods GET;
         }
     }
 }
